--- a/CalculatorLibraryTests/CalculatorLibraryTests.csproj
+++ b/CalculatorLibraryTests/CalculatorLibraryTests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConsoleApp1\ConsoleApp1.csproj" />
+    <ProjectReference Include="..\CreditCalculator\CreditCalculator.csproj" />
   </ItemGroup>
 
 </Project>
