--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CredCalculator\CreditCalculator.csproj" />
+    <ProjectReference Include="..\CreditCalculator\CreditCalculator.csproj" />
   </ItemGroup>
 
 </Project>
